feat: Initial cleanup and site structuring

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ oneflow-skin    : "aqua" # "default", "air", "aqua", "contrast", "dark", "dirt",
 
 # Site Settings
 locale                   : "en-US"
-title                    : "OneFlow Jekyll Theme"
+title                    : "Strength4Life Europe"
 title_separator          : "-"
 subtitle                 : " " # Displayed in the masthead below the title, use " " for no subtitle
-url                      : "https://test123domain123.de" # the base hostname & protocol for your site
+url                      : "" # the base hostname & protocol for your site
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "perstarke-webdev/oneflow-jekyll-theme" # GitHub username/repo-name
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -21,7 +21,7 @@ logo                     : "/assets/images/logo.webp" # Site logo displayed in t
 show-popup               : true # set to false if you don't need / want to show a cookie-banner / cdn-usage popup.
                                 # Edit the popup itself in the respective /includes file
 masthead_title           : " "  # Overrides the website title displayed in the masthead, use " " for no title
-sticky-masthead          : true # if true, masthead/navigation bar will stay visible when the user scrolls down.
+sticky-masthead          : false # if true, masthead/navigation bar will stay visible when the user scrolls down.
                                 # if false, it will move out of sight when scrolling.
 masthead-opacity         : 0.85 # set to any value between 0 and 1.
                                 # 0.8-0.9 is a good recommended starting point. Only relevant if masthead is sticky.
@@ -34,33 +34,30 @@ background-image-overlay : rgba(255, 255, 255, 0.5) # Set overlay for the backgr
 # Site Footer.
 footer:
   links: # replace the URL's with your own for every link you want to have in your footer.
-    - label: "Website"
-      icon: "fa fa-globe"
-      url: "https://perstarke-webdev.de"
     - label: "Email"
       icon: "fa fa-envelope"
-      url: "mailto: per@starke-team.de"
+      url: "mailto: jon@strength4life.eu"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
-      # url:
+      url: #
     - label: "X/Twitter"
       icon: "fab fa-x-twitter"
-      # url:
+      url: #
     - label: "Facebook"
       icon: "fab fa-facebook"
-      # url:
+      url: #
     - label: "GitHub"
       icon: "fab fa-github"
-      url: "https://github.com/perstarke-webdev"
+      url: #
     - label: "Instagram"
       icon: "fab fa-instagram"
-      url: "https://www.instagram.com/per.starke/"
+      url: #
     - label: "YouTube"
       icon: "fab fa-youtube"
-      url: "https://www.youtube.com/channel/UCG2Ndo4IEH8Fa0oIv2FBRMA"
+      url: #
     - label: "Dev"
       icon: "fab fa-dev"
-      url: "https://dev.to/per-starke-642"
+      url: #
   copyright: "Per Starke Web Development" # Replace with your own
   creator: # Replace with your own creator name or remove this if you don't want any "created by" in the footer
       name: "Per Starke Web Development"
@@ -161,4 +158,3 @@ defaults:
       type: "pages"
     values:
       layout: "page"
-
