--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,18 +1,11 @@
-# main links
 main:
-  - title: "Theme Documentation"
-    url: https://perstarke-webdev.de/oneflow-jekyll-theme
-    blank: true
-    description: "The documentation for this theme, on https://perstarke-webdev.de"
-  - title: "Section 1"
-    url: /#section-1
-    blank: false
-  - title: "Section 2"
-    url: /#section-2
-    blank: false
-  - title: "Section 3"
-    url: /#section-3
-    blank: false
-  - title: "Section 4"
-    url: /#section-4
-    blank: false
+  - title: "Home"
+    url: /
+  - title: "About"
+    url: /about/
+  - title: "Coaching for Individuals"
+    url: /coaching-for-individuals/
+  - title: "Consulting for Businesses"
+    url: /consulting-for-businesses/
+  - title: "Contact"
+    url: /contact/
